renamed type because of conflicts, reporting unique serial check

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -207,6 +207,7 @@ de:
        updated: 'Eintrag aktualisiert.'
        deleted: 'Entry gelöscht.'
        images: 'Bilder'
+       duplicate: 'Duplicate serial numbers: '
 
 # app/views/home
   home:
