--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -207,6 +207,7 @@ en:
        updated: 'Entry updated.'
        deleted: 'Entry deleted.'
        images: 'images'
+       duplicate: 'Duplicate serial numbers: '
 
 # app/views/home
   home:
