fixed supplier views, and a number of assorted issues

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -38,6 +38,7 @@ de:
     short: 'Short'
     address: 'Address'
     password: 'Kennwort'
+    password_length: 'Must be at least 8 characters long.'
     password_confirmation: 'Kennwort bestätigung'
 
     status: 'Status'
