serialnum can be not required, started on invoice layout

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -325,6 +325,7 @@ de:
 
 # app/views/types
   type:
+    serialnum_required: 'Serial Required?'
     index:
       title: 'Badger · Types for '
       legend: 'Types for '
